// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navigation components NavigationLayout should have expected layout 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gridTemplateRows": "auto 1fr",
      "height": "100vh",
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "gridRow": 1,
      }
    }
  >
    <nav
      className="navbar is-primary"
    >
      <div
        className="navbar-brand"
      />
      <div
        className="navbar-menu"
      >
        <div
          className="navbar-end"
        />
      </div>
    </nav>
  </div>
  <div
    style={
      Object {
        "gridRow": 2,
        "overflow": "hidden",
      }
    }
  >
    <div
      style={
        Object {
          "display": "grid",
          "gridTemplateRows": "auto 1fr",
          "height": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "gridRow": 1,
          }
        }
      >
        <div
          className="tabs is-centered"
          style={
            Object {
              "marginBottom": "0px",
            }
          }
        >
          <ul />
        </div>
      </div>
      <div
        style={
          Object {
            "gridRow": 2,
            "marginTop": "-3px",
            "overflow": "hidden",
          }
        }
      >
        <div
          style={
            Object {
              "height": "100%",
              "paddingTop": "3px",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`navigation components NavigationLayout should have expected navbar, tabs, and page 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gridTemplateRows": "auto 1fr",
      "height": "100vh",
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "gridRow": 1,
      }
    }
  >
    <nav
      className="navbar is-primary"
    >
      <div
        className="navbar-brand"
      >
        <a
          className="navbar-item"
          href="#"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-home fa-w-18 fa-fw "
            data-icon="home"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 576 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
        <a
          className="navbar-item"
          href="#"
          onClick={[Function]}
        >
          abc
        </a>
      </div>
      <div
        className="navbar-menu"
      >
        <div
          className="navbar-end"
        >
          <a
            className="navbar-item is-active"
            href="#"
            onClick={[Function]}
          >
            xyz
          </a>
          <a
            className="navbar-item"
            href="#"
            onClick={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-cog fa-w-16 fa-fw "
              data-icon="cog"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </a>
        </div>
      </div>
    </nav>
  </div>
  <div
    style={
      Object {
        "gridRow": 2,
        "overflow": "hidden",
      }
    }
  >
    <div
      style={
        Object {
          "display": "grid",
          "gridTemplateRows": "auto 1fr",
          "height": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "gridRow": 1,
          }
        }
      >
        <div
          className="tabs is-centered"
          style={
            Object {
              "marginBottom": "0px",
            }
          }
        >
          <ul>
            <li
              className=""
            >
              <a
                href="#"
                onClick={[Function]}
              >
                <span
                  className="icon is-small"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-cog fa-w-16 "
                    data-icon="cog"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    style={Object {}}
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"
                      fill="currentColor"
                      style={Object {}}
                    />
                  </svg>
                </span>
                ABC
              </a>
            </li>
            <li
              className="is-active"
            >
              <a
                href="#"
                onClick={[Function]}
              >
                <span
                  className="icon is-small"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-box fa-w-16 "
                    data-icon="box"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    style={Object {}}
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M509.5 184.6L458.9 32.8C452.4 13.2 434.1 0 413.4 0H272v192h238.7c-.4-2.5-.4-5-1.2-7.4zM240 0H98.6c-20.7 0-39 13.2-45.5 32.8L2.5 184.6c-.8 2.4-.8 4.9-1.2 7.4H240V0zM0 224v240c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48V224H0z"
                      fill="currentColor"
                      style={Object {}}
                    />
                  </svg>
                </span>
                XYZ
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        style={
          Object {
            "gridRow": 2,
            "marginTop": "-3px",
            "overflow": "hidden",
          }
        }
      >
        <div
          style={
            Object {
              "height": "100%",
              "paddingTop": "3px",
            }
          }
        >
          Hello!
        </div>
      </div>
    </div>
  </div>
</div>
`;
